syntax = "proto3";

package services.user.proto.v1;
option go_package = "services/user/proto/v1";

import "google/api/annotations.proto";

service AuthenticationService {
  rpc SignUp (SignUpRequest) returns (SignUpResponse) {
    option (google.api.http) = {
      post: "/api/v1/user/authentication/signup"
      body: "*"
    };
  } 
  rpc SignIn (SignInRequest) returns (SignInResponse) {
  }                      
  rpc LogOut (LogOutRequest) returns (LogOutResponse) {
  }
}

// SignUp.
message SignUpRequest {
  string name = 1;
}
message SignUpResponse {
  string name = 1;
}

// SignIn.
message SignInRequest {
}
message SignInResponse {
}

// LogOut.
message LogOutRequest {
}
message LogOutResponse {
}

// User.
message User {
}